--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tractorbeam
-url: "https://tractorbeam.me"
+url: "https://tractorbeam.ten7.com"
 permalink: pretty
 favicon: /images/favicon-32x32.png
 google_analytics: UA-1719985-8
