--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,79 @@
 title: Tractorbeam
+subtitle: "Version 1.0.0, 11/09/21"
 url: "https://tractorbeam.ten7.com"
-permalink: pretty
 favicon: /images/favicon-32x32.png
 plugins:
-  - jekyll-relative-links
+    - jekyll-relative-links
+    - jekyll-feed
+    - jekyll-seo-tag
 relative_links:
-  enabled: true
-  collections: true
+    enabled: true
+    collections: true
 include:
-  - index.md
+    - index.md
 remote_theme: chrisrhymes/bulma-clean-theme
-exclude: 
-  - Gemfile
-  - clean-theme.gemspec
-  - Gemfile.lock
-  - node_modules
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
-  - ansible/
-  - ansible-hosts
-  - ansible.cfg
+
+
+nav:
+    - title: "Getting Started"
+      is_mobile_nav_item: false
+      subfolderitems:
+          items:
+              - title: "Admin"
+                description: "Time off, brand guidelines, contact info"
+                url: "/admin.html"
+              - title: "Time Tracking and Payment"
+                description: "Harvest, timesheets, direct deposit"
+                url: "/time.html"
+              - title: "Process"
+                description: "Tools, hours, communication"
+                url: "/process.html"
+              - title: "Developer Specific"
+                description: "Code, git"
+                url: "/developer.html"
+    - title: "Support"
+      description: "Find the support you need"
+      url: "/admin.html"
+      is_mobile_nav_item: true 
+    - title: "Github"
+      description: "Check out our Github"
+      url: "https://github.com/ten7/tractorbeam.ten7.com"
+      is_button: true
+      is_mobile_nav_item: true
+
 
 markdown: kramdown
 
-defaults:
-  -
-    scope:
-      path: "" # an empty string here means all files in the project
-    values:
-      layout: "page"
-      hide_hero: true
-      hide_footer: true
+collections:
+  pages:
+    output: true
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+exclude:
+    - assets/_src/
+    - clean-theme.gemspec
+    - ansible/
+    - ansible-hosts
+    - ansible.cfg
+    - Gemfile
+    - Gemfile.lock
+    - imagemin.js
+    - LICENSE
+    - node_modules/
+    - npm-debug.log
+    - package.json
+    - package-lock.json
+    - README.md
+    - tsconfig.json
+    - vendor/bundle/
+    - vendor/cache/
+    - vendor/gems/
+    - vendor/ruby/
+    - webpack.config.js
+    - yarn.lock
