--- a/_config.yml
+++ b/_config.yml
@@ -15,25 +15,37 @@ remote_theme: chrisrhymes/bulma-clean-theme
 
 
 nav:
-    - title: "Getting Started"
+    - title: "How To"
       is_mobile_nav_item: false
       subfolderitems:
           items:
-              - title: "Admin"
-                description: "Time off, brand guidelines, contact info"
-                url: "/admin.html"
-              - title: "Time Tracking and Payment"
-                description: "Harvest, timesheets, direct deposit"
-                url: "/time.html"
-              - title: "Process"
-                description: "Tools, hours, communication"
-                url: "/process.html"
-              - title: "Developer Specific"
-                description: "Code, git"
-                url: "/developer.html"
+              - title: "Getting Started"
+                description: ""
+                url: "/setup.html"
+              - title: "Use"
+                description: ""
+                url: "/setup.html#use"
+              - title: "Configuration"
+                description: ""
+                url: "/setup.html#configuration"
+              - title: "Backing up databases"
+                description: ""
+                url: "/setup.html#backing-up-databases"
+              - title: "Backing up files"
+                description: ""
+                url: "/setup.html#backing-up-files"
+              - title: "Rolling directory backups"
+                description: ""
+                url: "/setup.html#rolling-directory-backups"
+              - title: "Deployment"
+                description: ""
+                url: "/setup.html#deployment"
+              - title: "Debugging"
+                description: ""
+                url: "/setup.html#debugging"
     - title: "Support"
       description: "Find the support you need"
-      url: "/admin.html"
+      url: "/support.html"
       is_mobile_nav_item: true 
     - title: "Github"
       description: "Check out our Github"
