--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ nav:
       is_mobile_nav_item: true
     - title: "Github"
       description: "Check out our Github"
-      url: "https://github.com/ten7/tractorbeam.ten7.com"
+      url: "https://github.com/ten7/tractorbeam"
       is_mobile_nav_item: true
       is_button: true
 
